--- a/Frontend/trivializer/src/components/LandingPage.css
+++ b/Frontend/trivializer/src/components/LandingPage.css
@@ -27,7 +27,7 @@ input:hover {
 }
 
 .login-modal {
-  height: 300px;
+  height: 350px;
 }
 
 .validation-label {
@@ -43,4 +43,21 @@ input:hover {
   margin: 0 auto;
   width: 100%;
   height: 50px;
+}
+
+.google-button-signup {
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.google-text {
+  padding-left: 10px;
+  padding-bottom: 3px;
+}
+
+.google-button-signup:hover {
+  cursor: pointer;
+  background-color: rgb(241, 241, 241);
 }
