--- a/Frontend/trivializer/src/components/Questions.css
+++ b/Frontend/trivializer/src/components/Questions.css
@@ -2,15 +2,30 @@
   border: 2px solid black;
   border-radius: 2%;
   margin: 2%;
+  text-align: left;
+  padding: 1%;
 }
 
 .questions {
   list-style-type: none;
   text-align: left;
+  padding: 1%;
+}
+
+.answer {
+  padding: 0.5%;
 }
 
 .main-content-round {
   width: 100%;
   display: flex;
   flex-flow: column wrap;
+}
+
+.title-round {
+  padding: 1%;
+}
+
+.info-round {
+  padding: 1%;
 }
