--- a/Frontend/trivializer/src/components/LandingPage.css
+++ b/Frontend/trivializer/src/components/LandingPage.css
@@ -1,3 +1,8 @@
+.landingpage-top {
+  display: flex;
+  justify-content: flex-end;
+}
+
 .signup-title,
 .login-title {
   margin-left: 160px;
@@ -70,13 +75,16 @@ input:hover {
   background-position: center;
 }*/
 
-.landing-page {
-  background-image: url("../img/background-neon-sideright.jpg");
-  background-repeat: no-repeat;
+/*.landing-page:before {
+  background-image: url("../img/back8.gif");
+  content: "";
   background-size: cover;
-  height: 100vh;
-}
+  position: fixed;
+  left: 0;
+  right: 0;
+  z-index: -1;
 
-.card {
-  margin-right: 200px;
-}
+  width: 100%;
+  height: 100vh;
+  filter: blur(2px);
+}*/
