--- a/Frontend/trivializer/src/components/LandingPage.css
+++ b/Frontend/trivializer/src/components/LandingPage.css
@@ -2,7 +2,28 @@
 .landing-page-navbar {
   text-align: right;
   height: 60px;
+  display: flex;
+  align-items: center;
 }
+.nav-item {
+  height: 30px;
+  margin-right: 30px;
+}
+.nav-right {
+  margin-right: 25px;
+}
+
+.nav-signup,
+.nav-signin {
+  margin-top: 7px;
+}
+
+.nav-signup:hover,
+.nav-signin:hover {
+  cursor: pointer;
+  color: red;
+}
+
 /* Signup & Signin Modal Customizations */
 .signup-title,
 .login-title {
@@ -90,9 +111,6 @@ input:hover {
   filter: blur(2px);
 }*/
 
-.landingpage-main {
-}
-
 .carousel-one {
   height: 450px;
 }
@@ -110,6 +128,14 @@ input:hover {
 }
 
 .description-text {
+  margin-top: 10px;
   width: 20%;
   margin-right: 6%;
+}
+
+.main-button {
+  margin-right: 100px;
+  margin-top: 10px;
+  height: 45px;
+  font-size: 18px;
 }
