--- a/Frontend/trivializer/src/components/LandingPage.css
+++ b/Frontend/trivializer/src/components/LandingPage.css
@@ -1,30 +1,22 @@
-/* Navbar */
-.landing-page-navbar {
+/* Top Navbar */
+.landingpage-navbar-right {
   text-align: right;
   height: 60px;
   display: flex;
   align-items: center;
 }
-.nav-item {
-  height: 30px;
-  margin-right: 30px;
-}
-.nav-right {
+
+.navbar-right-list {
   margin-right: 25px;
+  margin-top: 5px;
 }
 
-.nav-signup,
-.nav-signin {
-  margin-top: 7px;
-}
-
-.nav-signup:hover,
-.nav-signin:hover {
+.navbar-right-list:hover {
   cursor: pointer;
-  color: red;
+  /*color: red;*/
 }
 
-/* Signup & Signin Modal Customizations */
+/* Signup & Signin Modal*/
 .signup-title,
 .login-title {
   margin-left: 160px;
@@ -89,29 +81,8 @@ input:hover {
   background-color: rgb(241, 241, 241);
 }
 
-/*.landing-page {
-  background-image: url("../img/background-wood.jpg");
-  background-repeat: no-repeat;
-  background-size: cover;
-  height: 100vh;
-  background-position: center;
-}*/
-
-/*.landing-page:before {
-  background-image: url("../img/back8.gif");
-  content: "";
-  background-size: cover;
-  position: fixed;
-  left: 0;
-  right: 0;
-  z-index: -1;
-
-  width: 100%;
-  height: 100vh;
-  filter: blur(2px);
-}*/
-
-.carousel-one {
+/* Carousel */
+.carousel-design {
   height: 450px;
 }
 
