adding enterable login

--- a/Frontend/trivializer/src/components/LandingPage.css
+++ b/Frontend/trivializer/src/components/LandingPage.css
@@ -13,7 +13,10 @@
 
 .navbar-right-list:hover {
   cursor: pointer;
-  /*color: red;*/
+}
+
+.navbar-link:hover {
+  color: red;
 }
 
 /* Signup & Signin Modal*/
