--- a/Frontend/trivializer/src/components/LandingPage.css
+++ b/Frontend/trivializer/src/components/LandingPage.css
@@ -20,30 +20,6 @@
 }
 
 /* Signup & Signin Modal*/
-.signup-title,
-.login-title {
-  margin-left: 160px;
-}
-
-.signup-body,
-.login-body {
-  padding-bottom: 5px;
-}
-
-.signup-body input,
-.login-body input {
-  height: 50px;
-  padding-left: 8px;
-  border-radius: 5px;
-  border: 1px solid rgb(179, 179, 179);
-  width: 85%;
-  margin: 0 auto;
-}
-
-input:hover {
-  border: 1px solid rgb(73, 73, 255);
-}
-
 .modal-content {
   height: 425px;
 }
@@ -52,12 +28,35 @@ input:hover {
   height: 350px;
 }
 
+.signup-title,
+.login-title {
+  margin-left: 160px;
+}
+
+.modal-body {
+  padding: 18px 0 0 0;
+}
+
+.signup-body input,
+.login-body input {
+  height: 50px;
+  padding-left: 8px;
+  border-radius: 5px;
+  border: 1px solid rgb(179, 179, 179);
+  width: 80%;
+  margin: 0 auto;
+}
+
+input:hover {
+  border: 1px solid rgb(73, 73, 255);
+}
+
 .validation-label {
   text-align: left;
   color: red;
   font-size: 13px;
   height: 19px;
-  margin-left: 37px;
+  margin-left: 53px;
 }
 
 .create-button,
@@ -65,6 +64,9 @@ input:hover {
   margin: 0 auto;
   width: 100%;
   height: 50px;
+}
+.login-button {
+  margin-top: 18px;
 }
 
 .google-button-signup {
