Started working on saving rounds button and fixed stripe for heroku,.

--- a/Frontend/trivializer/src/components/Questions.css
+++ b/Frontend/trivializer/src/components/Questions.css
@@ -57,6 +57,10 @@
 .btn-primary.round {
   margin: 2%;
 }
+.btn-primary.save {
+  margin: 2%;
+  background:#74CC21;
+}
 
 .modal-content.modal-background {
   height: auto;
