landing page phone

--- a/Frontend/trivializer/src/components/LandingPage.css
+++ b/Frontend/trivializer/src/components/LandingPage.css
@@ -1,7 +1,6 @@
 /* Top Navbar */
 .landingpage-navbar-right {
   text-align: right;
-  height: 60px;
   display: flex;
   align-items: center;
 }
@@ -114,4 +113,25 @@ input:hover {
   margin-top: 10px;
   height: 45px;
   font-size: 18px;
+}
+
+/* Phone Design */
+@media screen and (max-width: 480px) {
+  .carousel-design {
+    height: 300px;
+  }
+
+  .descriptions {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .description-text {
+    width: 80%;
+  }
+
+  .main-button {
+    text-align: center;
+    margin: 0 auto;
+  }
 }
