--- a/Frontend/trivializer/src/components/Rounds.css
+++ b/Frontend/trivializer/src/components/Rounds.css
@@ -11,6 +11,14 @@
   flex-flow: column;
 }
 
+.rounds:hover {
+  box-shadow: 3px 5px;
+}
+
+.rounds:active {
+  transform: translateY(2px) translateX(2px);
+}
+
 .roundsTitle {
   align-self: center;
   max-width: 75%;
