--- a/Frontend/trivializer/src/components/Components.css
+++ b/Frontend/trivializer/src/components/Components.css
@@ -20,6 +20,10 @@
 .top-rightside {
   margin-right: 20px;
   text-decoration: underline;
+  color: blue;
+}
+.top-rightside:hover {
+  cursor: pointer;
 }
 
 .main-content {
