Finally figure out that REact needs 'require' in img src

--- a/Frontend/trivializer/src/components/Rounds.css
+++ b/Frontend/trivializer/src/components/Rounds.css
@@ -55,3 +55,12 @@
 .hidden {
   visibility: hidden;
 }
+
+@media print {
+  .btn-primary {
+    display: none;
+  }
+  .col-1-round {
+    text-align: left;
+  }
+}
