--- a/Frontend/trivializer/src/components/LandingPage.css
+++ b/Frontend/trivializer/src/components/LandingPage.css
@@ -1,4 +1,8 @@
 /* Top Navbar */
+.bg-light {
+  background-color: white !important;
+}
+
 .landingpage-navbar-right {
   text-align: right;
   display: flex;
