--- a/Frontend/trivializer/src/components/Components.css
+++ b/Frontend/trivializer/src/components/Components.css
@@ -15,6 +15,8 @@
 .top-content {
   display: flex;
   justify-content: space-between;
+  background-color: #e9ecef;
+  height: 48px;
 }
 
 .top-rightside {
@@ -29,18 +31,17 @@
 .main-content {
   display: flex;
   width: 90%;
-  margin-top: 20px;
 }
 
 .vertical-navbar {
-  width: 120px;
-  border: 2px solid black;
+  width: 150px;
   height: 75vh;
-  margin-left: 20px;
+  background-color: #c7c8ca;
+  height: 100vh;
 }
 
 .vertical-navbar li {
-  line-height: 5px;
+  line-height: 15px;
 }
 
 .main-middle {
