--- a/Frontend/trivializer/src/components/Components.css
+++ b/Frontend/trivializer/src/components/Components.css
@@ -14,6 +14,7 @@
   height: 48px;
 }
 
+/* Components Log Out Button */
 .top-rightside {
   margin-right: 20px;
   text-decoration: underline;
@@ -23,6 +24,7 @@
   cursor: pointer;
 }
 
+/* Main Content of components */
 .main-content {
   display: flex;
   width: 90%;
@@ -31,6 +33,8 @@
 .main-middle {
   margin: 0 auto;
 }
+
+/* Stripe */
 .pay-main {
   margin-left: 10px;
 }
