--- a/Frontend/trivializer/src/components/LandingPage.css
+++ b/Frontend/trivializer/src/components/LandingPage.css
@@ -127,6 +127,7 @@ input:hover {
   margin-top: 10px;
   height: 45px;
   font-size: 18px;
+  margin-bottom: 30px;
 }
 
 /* Tablet Design */
@@ -147,6 +148,7 @@ input:hover {
   .main-button {
     text-align: center;
     margin: 0 auto;
+    margin-bottom: 30px;
   }
 }
 
@@ -158,5 +160,8 @@ input:hover {
 
   .description-text {
     width: 80%;
+  }
+  #navbar-color img {
+    margin-left: -20px;
   }
 }
