--- a/Frontend/trivializer/src/components/Questions.css
+++ b/Frontend/trivializer/src/components/Questions.css
@@ -55,10 +55,16 @@
 
 .btn-primary.round {
   margin: 2%;
+  width: 160px;
 }
 .btn-primary.save {
   margin: 2%;
   background: #74cc21;
+  border: 1px solid #74cc21;
+}
+
+.btn-primary.save:hover {
+  background-color: #5da31b;
 }
 
 .undo-replace {
