--- a/Frontend/trivializer/src/components/GamesList.css
+++ b/Frontend/trivializer/src/components/GamesList.css
@@ -1,1 +1,19 @@
 /* Styles GamesList.css */
+.game {
+    border: 2px solid red;
+    margin: 4%;
+    padding: 1%;
+    display: flex;
+    flex-flow: column;
+    height: 15%;
+  }
+
+  .deleteButton{
+    margin-top: 4%;
+      
+  }
+  .deleteButton:hover {
+    box-shadow: 2px 2px;
+    background: #EE4432;
+    color: white;
+  }
