--- a/Frontend/trivializer/src/components/GamesList.css
+++ b/Frontend/trivializer/src/components/GamesList.css
@@ -15,6 +15,11 @@
   width: 200px;
 }
 
+.game-container .game-link {
+  color: black;
+  text-decoration: none;
+}
+
 .game-delete {
   margin-top: 4%;
     
@@ -36,6 +41,7 @@
 {
   border: 2px solid blue; 
   padding: 2%;
+  word-wrap: break-word;
 }
 
 
