--- a/Frontend/trivializer/src/components/Questions.css
+++ b/Frontend/trivializer/src/components/Questions.css
@@ -28,7 +28,7 @@
 .main-content-round {
   width: 100%;
   display: flex;
-  flex-flow: column wrap;
+  flex-flow: column nowrap;
 }
 
 .title-round {
