--- a/Frontend/trivializer/src/components/GamesList.css
+++ b/Frontend/trivializer/src/components/GamesList.css
@@ -5,14 +5,8 @@
 }
 
 .game-container {
-  border: 2px solid red;
-  border-radius: 10px;
-  margin: 20px;
-  padding: 0;
-  display: flex;
-  flex-flow: column;
-  height: 200px;
-  width: 200px;
+  width: 315px;
+  height: 300px;
 }
 
 .game-container .game-link {
@@ -20,9 +14,31 @@
   text-decoration: none;
 }
 
+.game-summary {
+  border: 2px solid red;
+  border-radius: 10px;
+  margin: 20px 10px 10px 20px;
+  padding: 0;
+  display: flex;
+  flex-flow: column;
+  justify-content: center;
+  height: 275px;
+  width: 275px;
+  transition: width 0.5s, height 0.5s, transform 0.5s;
+  top: 0;
+  left: 0;
+}
+
+.game-summary:hover {
+  width: 290px;
+  height: 290px;
+  top: 0;
+  left: 0;
+}
+
 .game-delete {
-  margin-top: 4%;
-    
+  margin: 10px auto;
+  width: 100px;
 }
 
 .game-delete:hover {
@@ -35,13 +51,15 @@
 
 }
 
-
-
 .game-description
 {
-  border: 2px solid blue; 
+  border: 2px solid blue;
+  border-radius: 10px; 
   padding: 2%;
   word-wrap: break-word;
+  margin: 10px 20px;
+  height: 100px;
+  text-align: left;
 }
 
 
