--- a/Frontend/trivializer/src/components/GamesList.css
+++ b/Frontend/trivializer/src/components/GamesList.css
@@ -14,6 +14,12 @@
   text-decoration: none;
 }
 
+.game-container .newgame-link {
+  text-decoration: none;
+  font-size: 24px;
+  margin: 0 auto;
+}
+
 .game-summary {
   border: 2px solid red;
   border-radius: 10px;
