--- a/Frontend/trivializer/src/components/Components.css
+++ b/Frontend/trivializer/src/components/Components.css
@@ -53,6 +53,24 @@
 }
 
 /* FAQs Page */
-.questions {
+.content-container {
+  margin-top: 30px;
+  text-align: left;
+  margin-left: 5%;
+  font-size: 20px;
+}
+
+.content-container h1 {
+  text-align: center;
+  margin-bottom: 25px;
+}
+
+.question-container {
+  margin-bottom: 30px;
+}
+
+.content-container .questions {
   font-weight: bold;
+  margin-bottom: 0;
+  padding: 0;
 }
