--- a/Frontend/trivializer/src/components/Components.css
+++ b/Frontend/trivializer/src/components/Components.css
@@ -32,7 +32,7 @@
 }
 
 .main-middle {
-  margin: 0 auto;
+  margin: 20px auto;
 }
 
 /* Stripe */
@@ -54,15 +54,16 @@
 
 /* FAQs Page */
 .content-container {
-  margin-top: 30px;
+  padding-top: 30px;
   text-align: left;
-  margin-left: 5%;
+  padding-left: 5%;
   font-size: 20px;
+  background-color: white;
 }
 
 .content-container h1 {
   text-align: center;
-  margin-bottom: 25px;
+  margin-bottom: 35px;
 }
 
 .question-container {
