--- a/Frontend/trivializer/src/components/Setting.css
+++ b/Frontend/trivializer/src/components/Setting.css
@@ -22,3 +22,31 @@
   margin-right: 80px;
   margin-left: 30px;
 }
+
+.setting-content {
+  text-align: left;
+  width: 75%;
+}
+
+.setting-content h2 {
+  text-align: left;
+  border-bottom: 2px solid black;
+}
+
+.signinUserName,
+.signinEmail,
+.signinPassword {
+  display: flex;
+  justify-content: space-between;
+  border-bottom: 1px solid grey;
+  padding-top: 15px;
+  padding-bottom: 15px;
+}
+
+.signinPassword {
+  border: none;
+}
+
+.signinTier {
+  margin-top: 30px;
+}
