--- a/Frontend/trivializer/src/components/Setting.css
+++ b/Frontend/trivializer/src/components/Setting.css
@@ -35,15 +35,17 @@
 
 .signinUserName,
 .signinEmail,
-.signinPassword {
+.signinPassword,
+.signinType,
+.signinPicture {
   display: flex;
   justify-content: space-between;
   border-bottom: 1px solid grey;
-  padding-top: 15px;
-  padding-bottom: 15px;
+  padding: 15px 5px 15px 0;
 }
 
-.signinPassword {
+.signinPassword,
+.signinPicture {
   border: none;
 }
 
