--- a/Frontend/trivializer/src/components/Setting.css
+++ b/Frontend/trivializer/src/components/Setting.css
@@ -26,6 +26,7 @@
 .setting-content {
   text-align: left;
   width: 75%;
+  margin-top: 0;
 }
 
 .setting-content h2 {
@@ -51,4 +52,8 @@
 
 .signinTier {
   margin-top: 30px;
+}
+
+.addPicture {
+  width: 250px;
 }
