--- a/Frontend/trivializer/src/components/Setting.css
+++ b/Frontend/trivializer/src/components/Setting.css
@@ -38,7 +38,10 @@
 .signinEmail,
 .signinPassword,
 .signinType,
-.signinPicture {
+.signinFree,
+.signinPicture,
+.signinName,
+.signinUpgrade {
   display: flex;
   justify-content: space-between;
   border-bottom: 1px solid grey;
@@ -46,7 +49,9 @@
 }
 
 .signinPassword,
-.signinPicture {
+.signinPicture,
+.googleEmail,
+.googleUpgrade {
   border: none;
 }
 
@@ -56,4 +61,16 @@
 
 .addPicture {
   width: 250px;
+}
+
+.save-button {
+  margin-top: 20px;
+}
+
+.google-photo {
+  text-align: center;
+}
+
+.setting-container {
+  padding-top: 0;
 }
