--- a/Frontend/trivializer/src/components/Navbar.css
+++ b/Frontend/trivializer/src/components/Navbar.css
@@ -1,12 +1,12 @@
 /* Vertical Navbar */
 .main-content {
-  background-color: #f04e39;
+  background-color: #b13c2d;
 }
 
 .vertical-navbar {
   width: 150px;
   height: 75vh;
-  background-color: #f04e39;
+  background-color: #b13c2d;
   height: 95vh;
 }
 
