--- a/Frontend/trivializer/src/components/GamesList.css
+++ b/Frontend/trivializer/src/components/GamesList.css
@@ -64,3 +64,29 @@
   height: 100px;
   text-align: left;
 }
+
+.addnewGame {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.gamelist {
+  display: flex;
+  justify-content: center;
+  font-size: 90px;
+}
+
+.addnewGame h3 {
+  font-size: 60px;
+}
+
+.fas {
+  color: black;
+}
+
+.fas:hover {
+  color: #b13c2d;
+  cursor: pointer;
+}
