--- a/Frontend/trivializer/src/components/GamesList.css
+++ b/Frontend/trivializer/src/components/GamesList.css
@@ -75,7 +75,7 @@
 .gamelist {
   display: flex;
   justify-content: center;
-  font-size: 90px;
+  padding-top: 0;
 }
 
 .addnewGame h3 {
@@ -84,6 +84,7 @@
 
 .fas {
   color: black;
+  font-size: 90px;
 }
 
 .fas:hover {
