finished gamelist view

--- a/Frontend/trivializer/src/components/GamesList.css
+++ b/Frontend/trivializer/src/components/GamesList.css
@@ -102,3 +102,12 @@
   display: flex;
   flex-wrap: wrap;
 }
+
+.cardnewGame {
+  color: black;
+  margin-bottom: 30px;
+}
+
+.small-fas {
+  font-size: 50px;
+}
