--- a/Frontend/trivializer/src/components/EditGameView.css
+++ b/Frontend/trivializer/src/components/EditGameView.css
@@ -3,11 +3,12 @@
 .editGameView {
   display: flex;
   flex-flow: column;
-  border: 4px solid black;
-  border-radius: 25%;
+  border: 2px solid black;
+  border-radius: 10px;
   align-items: center;
   padding: 2%;
-  width: 25%;
+  width: 600px;
+  height: 375px;
 }
 
 .editGameView-top {
