--- a/Frontend/trivializer/src/components/Rounds.css
+++ b/Frontend/trivializer/src/components/Rounds.css
@@ -19,6 +19,10 @@
   margin: 4%;
   display: flex;
   flex-flow: column;
+  width: 350px;
+  border-radius: 10px;
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
 .rounds:hover {
   box-shadow: 1px 1px;
@@ -34,6 +38,13 @@
   display: flex;
   justify-content: space-between;
   margin: 2% 4% 2% 4%;
+}
+
+.dropdown label {
+  font-size: 17px;
+}
+.dropdown select {
+  font-size: 17px;
 }
 
 .select:hover {
