--- a/Frontend/trivializer/src/components/Rounds.css
+++ b/Frontend/trivializer/src/components/Rounds.css
@@ -65,18 +65,27 @@
 }
 
 .roundsButton {
-  border-radius: 5%;
+  border-radius: 10%;
   margin: 1%;
   font-size: 12px;
 }
 
 .roundsButton:hover {
   box-shadow: 2px 2px;
-  background: lightcyan;
+  background: #007BFF;
+  color: white;
 }
 
 .roundsButton:active {
   transform: translateY(2px);
+}
+.save:hover{
+  background: #2db168;
+  color: white;
+}
+.delete:hover{
+  background: #b13c2d;
+  color: white;
 }
 
 .hidden {
