--- a/Frontend/trivializer/src/components/Setting.css
+++ b/Frontend/trivializer/src/components/Setting.css
@@ -79,3 +79,22 @@
   display: flex;
   justify-content: center;
 }
+
+.signinUserName input,
+.signinEmail input,
+.signinPassword input {
+  border-radius: 5px;
+  padding-left: 10px;
+  width: 220px;
+  border: 1px solid rgb(184, 181, 181);
+}
+
+.signinUserName input,
+.signinEmail input,
+.signinPassword input {
+  background-image: none;
+  outline: 0;
+}
+
+@media screen and (max-width: 750px) {
+}
