--- a/Frontend/trivializer/src/components/styles/Rounds.css
+++ b/Frontend/trivializer/src/components/styles/Rounds.css
@@ -70,18 +70,18 @@
 
 .roundsButton:hover {
   box-shadow: 2px 2px;
-  background: #007BFF;
+  background: #007bff;
   color: white;
 }
 
 .roundsButton:active {
   transform: translateY(2px);
 }
-.save:hover{
+.save:hover {
   background: #2db168;
   color: white;
 }
-.delete:hover{
+.delete:hover {
   background: #b13c2d;
   color: white;
 }
@@ -137,5 +137,12 @@
     display: flex;
     flex-flow: column;
     justify-content: space-between;
+  }
+}
+
+@media screen and (max-width: 950px) {
+  .roundsList {
+    width: 75%;
+    margin: 0 auto;
   }
 }
