--- a/Frontend/trivializer/src/components/styles/Rounds.css
+++ b/Frontend/trivializer/src/components/styles/Rounds.css
@@ -19,12 +19,14 @@
   margin: 4%;
   display: flex;
   flex-flow: column;
-  border-radius: 10px;
+  border-radius: 5px;
   padding-top: 10px;
   padding-bottom: 10px;
 }
+
 .rounds:hover {
   box-shadow: 1px 1px;
+  border: 3px solid grey;
 }
 .roundsTitle {
   align-self: center;
@@ -66,10 +68,16 @@
   border-radius: 10%;
   margin: 1%;
   font-size: 12px;
+  padding: 0;
+}
+
+.see {
+  font-size: 12px !important;
 }
 
 .roundsButton:hover {
   box-shadow: 2px 2px;
+  border: 1px solid #007bff;
   background: #007bff;
   color: white;
 }
@@ -78,10 +86,12 @@
   transform: translateY(2px);
 }
 .save:hover {
+  border: 1px solid #2db168;
   background: #2db168;
   color: white;
 }
 .delete:hover {
+  border: 1px solid #b13c2d;
   background: #b13c2d;
   color: white;
 }
@@ -116,6 +126,14 @@
 
 .newRound-inner:hover {
   opacity: 1;
+}
+
+.roundsButtons button {
+  width: 90px;
+  height: 30px;
+  border: none;
+  font-size: 14px;
+  cursor: pointer;
 }
 
 @media print {
