--- a/Frontend/trivializer/src/components/styles/Rounds.css
+++ b/Frontend/trivializer/src/components/styles/Rounds.css
@@ -10,31 +10,58 @@
   align-items: center;
 }
 
-.roundsList {
+.roundslist-container {
   display: flex;
-  flex-flow: row wrap;
+  flex-wrap: wrap;
 }
-.rounds {
+
+.rounds-container {
+  width: 350px;
+  height: 350px;
+  margin: 20px 10px 10px 20px;
+}
+
+.rounds-summary {
   border: 2px solid black;
-  margin: 4%;
+  border-radius: 10px;
+  margin: auto;
+  display: flex;
+  flex-flow: column;
+  justify-content: center;
+  height: 320px;
+  width: 320px;
+  transition: width 0.5s, height 0.5s, transform 0.5s;
+}
+
+.rounds-summary:hover {
+  width: 340px;
+  height: 340px;
+}
+
+/* .rounds {
+  border: 2px solid black; */
+/* margin: 4%;
   display: flex;
   flex-flow: column;
   border-radius: 5px;
   padding-top: 10px;
   padding-bottom: 10px;
-}
+} */
 
-.rounds:hover {
+/* .rounds:hover {
   box-shadow: 1px 1px;
   border: 3px solid grey;
-}
+} */
+
 .roundsTitle {
   align-self: center;
   max-width: 75%;
 }
+
 .roundsOption {
   max-width: 20px;
 }
+
 .dropdown {
   display: flex;
   justify-content: space-between;
@@ -44,6 +71,7 @@
 .dropdown label {
   font-size: 17px;
 }
+
 .dropdown select {
   font-size: 17px;
 }
@@ -85,11 +113,13 @@
 .roundsButton:active {
   transform: translateY(2px);
 }
+
 .save:hover {
   border: 1px solid #2db168;
   background: #2db168;
   color: white;
 }
+
 .delete:hover {
   border: 1px solid #b13c2d;
   background: #b13c2d;
@@ -140,6 +170,7 @@
   .btn-primary {
     display: none;
   }
+
   .col1-round {
     text-align: left;
     flex-flow: column nowrap;
@@ -151,6 +182,7 @@
   .roundsList {
     flex-flow: column nowrap;
   }
+
   .topContent-round {
     display: flex;
     flex-flow: column;
